--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "config": "^3.3.6",
+    "connect": "^3.7.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.2",
+    "request-ip": "^2.1.3",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
