--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ReactifyStudio",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^6.6.0",
     "config": "^3.3.6",
     "connect": "^3.7.0",
     "ejs": "^3.1.6",
