--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.7"
   }
 }
